Bug 1786881 - Reuse connection for connection based auth, r=necko-reviewers,valentin

Differential Revision: https://phabricator.services.mozilla.com/D156154